# opendata-backend

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  connectors.md  golden-sql.md  onboarding.md  roadmap.md
examples/toy/: dbt_project.yml  seed.sql
examples/toy/.opendata/golden/: weekly_active_teams.sql
src/opendata/: __init__.py  cli.py  config.py  engine.py
src/opendata/api/: server.py
src/opendata/connectors/: __init__.py  base.py  dbt_core.py  dbt_profiles.py  execute.py  warehouse_duckdb.py  warehouse_postgres.py  warehouse_snowflake.py
src/opendata/context/: embeddings.py  models.py  retrieve.py  store.py
src/opendata/eval/: harness.py
src/opendata/golden/: store.py  verify.py
src/opendata/llm/: provider.py
src/opendata/sql/: validate.py
tests/: conftest.py  test_connectors.py  test_context.py  test_embeddings.py  test_engine.py  test_golden.py  test_provider.py  test_server.py  test_sql_validate.py
