[project]
name = "opendata"
version = "0.1.0"
description = "The open-source data workspace in the AI era — one context for your data team."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "parker84" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "sqlglot>=25",
    "duckdb>=1.0",
    "pyyaml>=6",
]

[project.scripts]
opendata = "opendata.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendata"]
