[project]
name = "opendata"
version = "0.1.0"
description = "The open-source data workspace in the AI era — one context for your data team."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "parker84" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "sqlglot>=25",
    "duckdb>=1.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
# The real Claude text-to-SQL provider (BYO key). Base install stays offline.
llm = ["anthropic>=0.40"]
# Real Postgres warehouse execution (detection + GRANT work without it).
postgres = ["psycopg[binary]>=3.1"]
# Read-only HTTP API (opendata serve) — the transport opendata-web calls.
server = ["fastapi>=0.110", "uvicorn>=0.29"]
# Test suite (includes the API deps so the server tests run in CI).
dev = ["pytest>=8", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
opendata = "opendata.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
